[package]
name = "titlecase"
description = "Capitalize text according to a style defined by John Gruber for Daring Fireball."
version = "3.0.0"
edition = "2021"
authors = ["Wesley Moore <wes@wezm.net>"]
rust-version = "1.70.0"

documentation = "https://docs.rs/titlecase"
repository = "https://github.com/wezm/titlecase"

readme = "README.md"
license = "MIT"

keywords = ["title", "case", "capitalization", "capitalisation", "capitalize"]
categories = ["text-processing"]

[dependencies]
regex = { version = "1.10", default-features = false, features = ["std", "perf", "unicode-perl"]}
